--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
                     <div class="loan-details">
                         <div class="detail-item">
                             <span>Amount</span>
-                            <strong>₹10K - ₹50L</strong>
+                            <strong>₹10K - ₹5000L</strong>
                         </div>
                         <div class="detail-item">
                             <span>Interest</span>
-                            <strong>10.5% - 18%</strong>
+                            <strong>0.5% - 30%</strong>
                         </div>
                         <div class="detail-item">
                             <span>Tenure</span>
-                            <strong>1-7 Years</strong>
+                            <strong>1-20 Years</strong>
                         </div>
                     </div>
                     
@@ -298,11 +298,11 @@
                     <div class="loan-details">
                         <div class="detail-item">
                             <span>Amount</span>
-                            <strong>₹50K - ₹50L</strong>
+                            <strong>₹50K - ₹500L</strong>
                         </div>
                         <div class="detail-item">
                             <span>Interest</span>
-                            <strong>9.5% - 15%</strong>
+                            <strong>9.5% - 30%</strong>
                         </div>
                         <div class="detail-item">
                             <span>Tenure</span>
@@ -398,17 +398,17 @@
                                 <span class="amount-display" id="loanAmountDisplay">5,00,000</span>
                             </label>
                             <div class="input-range">
-                                <input type="range" id="loanAmountSlider" min="10000" max="5000000" step="10000" value="500000" class="slider">
+                                <input type="range" id="loanAmountSlider" min="1000" max="50000000" step="100000" value="5000000" class="slider">
                                 <div class="range-labels">
-                                    <span>₹10K</span>
-                                    <span>₹25L</span>
-                                    <span>₹50L</span>
+                                    <span>₹1K</span>
+                                    <span>₹250L</span>
+                                    <span>₹500L</span>
                                 </div>
                             </div>
                             <div class="input-direct">
                                 <div class="input-with-icon">
                                     <i class="fas fa-rupee-sign"></i>
-                                    <input type="number" id="loanAmountInput" min="10000" max="5000000" value="500000" placeholder="Enter amount">
+                                    <input type="number" id="loanAmountInput" min="1000" max="50000000" value="5000000" placeholder="Enter amount">
                                 </div>
                             </div>
                         </div>
@@ -419,17 +419,17 @@
                                 <span class="rate-display" id="interestRateDisplay">12.5%</span>
                             </label>
                             <div class="input-range">
-                                <input type="range" id="interestRateSlider" min="5" max="25" step="0.1" value="12.5" class="slider">
+                                <input type="range" id="interestRateSlider" min="0.5" max="30" step="0.1" value="12.5" class="slider">
                                 <div class="range-labels">
-                                    <span>5%</span>
+                                    <span>0.5%</span>
                                     <span>15%</span>
-                                    <span>25%</span>
+                                    <span>30%</span>
                                 </div>
                             </div>
                             <div class="input-direct">
                                 <div class="input-with-icon">
                                     <i class="fas fa-percentage"></i>
-                                    <input type="number" id="interestRateInput" min="5" max="25" step="0.1" value="12.5" placeholder="Enter rate">
+                                    <input type="number" id="interestRateInput" min="0.5" max="30" step="0.1" value="12.5" placeholder="Enter rate">
                                 </div>
                             </div>
                         </div>
@@ -437,7 +437,7 @@
                         <div class="input-group">
                             <label class="input-label">
                                 <span>Loan Tenure (Years)</span>
-                                <span class="tenure-display" id="loanTenureDisplay">5 Years</span>
+                                <span class="tenure-display" id="loanTenureDisplay">50 Years</span>
                             </label>
                             <div class="input-range">
                                 <input type="range" id="loanTenureSlider" min="1" max="30" step="1" value="5" class="slider">
