--- a/index.html
+++ b/index.html
@@ -625,8 +625,7 @@
                             </a>
                             <a href="mailto:prime@zohomail.in">
                                 <i class="fas fa-envelope"></i>
-                                prime@zohomail.in
-                            </a>
+                                SHUBHAMPATELCA@GMAIL.COM                            </a>
                         </div>
                         
                         <div class="team-actions">
